<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuieroViajar!</string>
    <string name="my_flights">My flights</string>
    <string name="search_flight">Search fight</string>
    <string name="sales">Deals</string>
    <string name="terminal">Terminal </string>
    <string name="gate">Gate </string>
    <string name="luggage">Luggage </string>
    <string name="erase">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="comment">Comment</string>
    <string name="settings">Settings</string>
    <string name="add_flight">Add flight</string>
    <string name="search_hint">Search flights</string>
    <string name="search_label">Search</string>
    <string name="canceled">Canceled</string>
    <string name="diverted">Diverted</string>
    <string name="planned">Planned</string>
    <string name="active">Active</string>
    <string name="landed">Landed</string>
    <string name="redirected">Redirected</string>
    <string name="scheduled">Scheduled</string>
    <string name="bording">Boarding</string>
    <string name="unboarding">Unboarding</string>
    <string name="refresh_error">Unable to refresh</string>
    <string name="flight_deleted">The flight has been deleted</string>
    <string name="rate_flight">Rate flight</string>
    <string name="comment_confirmation">Thank you for commenting!</string>
    <string name="comment_fail">Unable to comment</string>
    <string name="connection_error">Connection error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="deals_from">Deals from</string>
    <string name="city_search_fail">Unable to find cities nearby</string>
    <string name="search_fail">No matches found</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="every">every</string>
    <string name="new_departure_terminal">New departure terminal</string>
    <string name="new_arrival_terminal">New arrival terminal</string>
    <string name="new_departure_gate">New departure gate</string>
    <string name="new_arrival_gate">New arrival gate</string>
    <string name="change_lugagge">Luggage change</string>
    <string name="boarding_time_scheduled">Boarding time scheduled</string>
    <string name="unboarding_time_scheduled">Unboarding time scheduled</string>
    <string name="boarding_time_changed">Boarding time changed</string>
    <string name="unboarding_time_changed">Unboarding time changed</string>
    <string name="takeoff_time_changed">Take off time changed</string>
    <string name="landing_time_changed">Landing time changed</string>
    <string name="scheduled_flight">Planned</string>
    <string name="active_flight">Active</string>
    <string name="diverted_flight">Diverted</string>
    <string name="landed_flight">Landed</string>
    <string name="canceled_flight">Canceled</string>
    <string name="redirected_flight">Redirected</string>
    <string name="commentary">Comments</string>

</resources>