<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/sales_tab"
        android:showAsAction="always|withText"
        android:title="@string/sales"/>
    <item
        android:id="@+id/add_flight"
        android:showAsAction="always|withText"
        android:title="@string/add_flight"/>

    <item
        android:id="@+id/erase"
        android:showAsAction="always|withText"
        android:title="@string/erase"/>
    <item
        android:id="@+id/refresh"
        android:showAsAction="always|withText"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/comment"
        android:showAsAction="ifRoom|withText"
        android:title="@string/comment"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings"/>

</menu>