<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/erase"
        android:showAsAction="always|withText"
        android:icon="@drawable/ic_discard"
        android:title="@string/erase"/>
    <item
        android:id="@+id/refresh"
        android:showAsAction="always|withText"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/comment"
        android:icon="@drawable/ic_comment_empty"
        android:showAsAction="ifRoom|withText"
        android:title="@string/comment"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"/>

</menu>